2008-04-02 Xinghua Yang <yxinghua@sunnorth.com.cn>
	   Andrew Lunn <andrew.lunn@ascom.ch>

	* cdl/fileio.cdl: Use CYGPKG_FILEIO_DIRENT_DTYPE to enable/disable
	d_type field of struct dirent.
	* include/dirent.h: Add a d_type field to struct dirent, in order to
	distinguish file type directly without calling stat.
	* doc/fileio.sgml: Documentation about this new member and the fact
	it is not portable.

2007-08-17 Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>

	tests/fnmatch.c (main): Fix cut/paste error in final pass/fail
	report.
	
2007-06-12  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/misc.cxx (cyg_mtab_extra): Only create the array if it has more
	than 0 entries.

2007-01-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/fnmatch.c: Test case for fnmatch.

2007-01-24  Peter Korsgaard  <peter.korsgaard@barco.com>

	* cdl/fileio.cdl:
	* src/fnmatch.c:
	* include/fnmatch.h: Added fnmatch() implementation (from NetBSD).

2006-05-18  Paul Fine  <pfine@dtccom.com>

	* include/fileio.h : Added a key and a structure to extract the
	disk size and the available free space for a filesystem using
	the cyg_fs_getinfo() interface.

2006-05-17  Andy Jackson <andy@grapevinetech.co.uk>
	
	* tests/fileio1.c: Compiler warning fixes.
	* tests/testfs.c:  Compiler warning fixes.

2006-02-16  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/misc.cxx (cyg_mtab_lookup): Corrected implementation for
	relative paths crossing mount points.
	* tests/fileio1.c (cyg_user_start): Add a test for the above fix.

2005-10-20  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/select.cxx: Needs sys/time.h for struct timeval.

2005-08-02  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/socket.c (SHOW_RESULT): Add a cast to avoid compiler
	warnings about the format string not matching the parameters.
	* tests/testfs.c: rename strcmp and strcpy to mystrcmp and
	mystrcpy to avoid clashes with the normal implementations.
	
2005-05-13  Peter Korsgaard  <jacmet@sunsite.dk>
